Style1 added by Manoj

--- a/css/style1.css
+++ b/css/style1.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('images/img\ 2.jpg');
+    background-image: url('images/bg_img_2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
