added navigation bar on all the pages and made some changes css files, also added a new background image in signup

--- a/css/style1.css
+++ b/css/style1.css
@@ -1,15 +1,16 @@
 body {
-  background-color: #f2f2f2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-image: url("/images/bg_img_2.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.container {
+.container1 {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
