--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url("/images/bgimage4.jpg");
+  background-image: url("/images/bgpattern2.jpg");
   background-size: cover;
 }
 
@@ -36,6 +36,7 @@ body {
 .signUp h2 {
   font-size: 2rem;
   padding: 0.4em 2.5%;
+  margin-top: 10px;
   text-shadow: -3px 5px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -66,14 +67,16 @@ body {
   outline: none;
   cursor: pointer;
   transition: 0.5s;
-  background-color: rgba(179, 23, 179, 0.712);
+  /* background-color: rgba(179, 23, 179, 0.712); */
+  background-color: #7f4ece;
 }
 
 .btnSignUp:hover {
   font-size: 1.2rem;
   font-weight: bold;
   color: whitesmoke;
-  background-color: rgb(150, 5, 150);
+  /* background-color: rgb(150, 5, 150); */
+  background-color: #593692;
 }
 
 p {
@@ -83,6 +86,7 @@ p {
 .socialIcons {
   padding-top: 10px;
   padding-bottom: 20px;
+  margin-right: 30px;
 }
 
 .socialIcons ul {
