changed colors in stylye.css

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .signUp h2 {
-  font-size: 2rem;
+  font-size: 2.1rem;
   padding: 0.4em 2.5%;
   margin-top: 10px;
   text-shadow: -3px 5px 3px rgba(0, 0, 0, 0.5);
@@ -113,6 +113,7 @@ p {
 
 .socialIcons ul li a:hover {
   color: whitesmoke;
-  background-color: rgb(150, 5, 150);
+  /* background-color: rgb(150, 5, 150); */
+  background-color: #593692;
   border-radius: 50%;
 }
